--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.callee.calleeclient">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_app"
@@ -9,6 +10,8 @@
         android:roundIcon="@mipmap/ic_app_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <receiver android:name=".HomeActivity$HomeBReceiver"/>
+        <receiver android:name=".ChatActivity$ChatBReceiver"/>
         <activity
             android:name=".HomeActivity"
             android:label="@string/app_name"
