--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,23 +9,33 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_app_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <receiver android:name=".HomeActivity$HomeBReceiver"/>
-        <receiver android:name=".ChatActivity$ChatBReceiver"/>
+        android:theme="@style/AppTheme"
+        >
+
+        <receiver android:name=".activities.HomeActivity$HomeBReceiver"/>
+        <receiver android:name=".activities.ChatActivity$ChatBReceiver"/>
+
+        <activity android:name=".activities.WelcomeActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"
+            android:noHistory="true">
+
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" /> <!--for deep linking-->
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+
         <activity
-            android:name=".HomeActivity"
+            android:name=".activities.HomeActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" /> <!--for deep linking-->
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-        <activity android:name=".ChatActivity"
+
+        <activity android:name=".activities.ChatActivity"
             android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName="com.callee.calleeclient.HomeActivity"
+            android:parentActivityName="com.callee.calleeclient.activities.HomeActivity"
         />
     </application>
 
