--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".activities.ChatActivity"
             android:theme="@style/AppTheme.NoActionBar"
             android:parentActivityName="com.callee.calleeclient.activities.HomeActivity"
+            android:windowSoftInputMode="stateAlwaysHidden"
         />
     </application>
 
