--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.callee.calleeclient">
+    package="com.callee.calleeclient"
+    android:installLocation="internalOnly">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_app"
@@ -46,6 +48,9 @@
             android:enabled="true">
         </service>
 
+        <service android:name=".services.JIService"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
+
         <receiver android:name=".services.UpdateService$RestarterBroadcastReceiver"
             android:enabled="true"
             android:exported="true"
@@ -54,15 +59,14 @@
 
         <receiver android:name=".services.UpdateService$StartOnBootReceiver"
             android:enabled="true"
-            android:exported="false"
             android:label="onBootStartService"
             >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
                 <action android:name="android.intent.action.REBOOT"/>
+                <category android:name="android.intent.category.HOME"/>
             </intent-filter>
         </receiver>
-
 
     </application>
 
